# cpp-2-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
cpp-2-rust-ui/: README.md  index.html  package-lock.json  package.json
cpp-2-rust-ui/src/: App.tsx  main.tsx  theme.ts
cpp2rust/: Cargo.toml
cpp2rust-app/: index.html  package.json
cpp2rust-app/src/: App.css  App.tsx  cmake.ts  main.tsx  tauri_utils.ts  theme.ts
cpp2rust-app/src-tauri/: Cargo.toml  tauri.conf.json
cpp2rust-app/src-tauri/src/: lib.rs  main.rs
cpp2rust-app/src/backend/: cmake.ts  index.ts
cpp2rust-app/src/components/: CMakeAddVariableDialog.tsx  CMakeCacheEntriesControl.tsx  CMakeConfiguration.tsx  CMakeControls.tsx  CMakeLog.tsx  CMakeTable.tsx  CMakeValue.tsx  FolderTextfield.tsx
cpp2rust-cli/: Cargo.toml
cpp2rust-cli/src/: main.rs  options.rs  secret.rs
cpp2rust/src/: error.rs  lib.rs
cpp2rust/src/cpp/: builder.rs  mod.rs  project.rs
cpp2rust/src/cpp/builder/: cmake_cache.rs  cmake_files.rs  mod.rs
cpp2rust/src/llm/: mod.rs
cpp2rust/src/utils/: mod.rs
cpp2rust/test_data/: CMakeCache.txt
cpp2rust/test_data/finding_cmake_lists/b/: stub.txt
cpp2rust/tests/: find_cmake_files_test.rs
