[package]
name = "cpp2rust"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
thiserror = "2.0"
ai = { git = "https://github.com/sraesch/rs-ai.git", rev = "be0951a883ad14a8b92a0b647df347c9b351df89" }
url = "2.2"
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
